# firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  memmap_custom.ld
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/ISSUE_TEMPLATE/: config.yml  report.yml
.github/workflows/: build_nightly.yml  build_release.yml  cmake.yml
database/: CMakeLists.txt  db_obj_builder.cmake  get_and_parse_hdldb.py  parse_GameDB.py  parse_arcade.py  requirements.txt
ext/: CMakeLists.txt
ext/ESP8266SdFatWrapper/include/: sd.h
ext/ESP8266SdFatWrapper/src/: sd.cpp  sdBd.cpp
ext/inih/: ini.c  ini.h
ext/mcfat/: CMakeLists.txt
ext/mcfat/inc/: mcfat.h  mcio.h
ext/mcfat/src/: mcfat.c  mcfat_internal.h  mcio.c
ext/ssd1306/: ssd1306.c  ssd1306.h
misc/: CMakeLists.txt  icon_A.sys  icon_C.sys  icon_J.sys  variants.cmake
src/: bigmem.c  bigmem.h  card_config.c  card_config.h  config.h  debug.c  debug.h  des.c  flashmap.h  gui.c  gui.h  input.c  input.h  keystore.c  keystore.h  led.c  led.h  lv_conf.h  main.c  oled.c  oled.h  ps1.c  ps1.h  ps2.c  ps2.h  sd.h  settings.c  settings.h  splash.c  splash.h  util.c  util.h
src/arduino_wrapper/: sd.cpp
src/game_db/: game_db.c  game_db.h
src/led/: CMakeLists.txt  led.c  led.h  ws2812.pio
src/ps1/: CMakeLists.txt  ps1_cardman.c  ps1_cardman.h  ps1_dirty.c  ps1_mc_data_interface.c  ps1_mc_data_interface.h  ps1_mc_spi.pio  ps1_memory_card.c  ps1_memory_card.h  ps1_mmce.c  ps1_mmce.h  ps1_odeman.c  ps1_odeman.h
src/ps2/: CMakeLists.txt  ps2_cardman.c  ps2_cardman.h  ps2_dirty.c  ps2_history_tracker.c  ps2_history_tracker.h  ps2_memory_card.c  ps2_psram.c  ps2_sd2psxman.c  ps2_sd2psxman.h  temp_profiling.c  temp_profiling.h
src/ps2/card_emu/: ps2_mc_auth.c  ps2_mc_auth.h  ps2_mc_commands.c  ps2_mc_commands.h  ps2_mc_data_interface.c  ps2_mc_data_interface.h  ps2_mc_internal.h  ps2_mc_spi.pio  ps2_memory_card.c  ps2_memory_card.h  ps2_mmceman.c  ps2_mmceman.h  ps2_mmceman_commands.c  ps2_mmceman_commands.h  ps2_mmceman_debug.c  ps2_mmceman_debug.h  ps2_sd2psxman.c  ps2_sd2psxman.h  ps2_sd2psxman_commands.c  ps2_sd2psxman_commands.h
src/ps2/file_handling/: ps2_file_handling.c  ps2_file_handling.h
src/ps2/history_tracker/: CMakeLists.txt  ps2_history_tracker.c  ps2_history_tracker.h
src/ps2/mmce_fs/: ps2_mmce_fs.c  ps2_mmce_fs.h
src/ps2/mmceman/: ps2_mmceman.c  ps2_mmceman.h  ps2_mmceman_commands.c  ps2_mmceman_commands.h  ps2_mmceman_debug.c  ps2_mmceman_debug.h  ps2_mmceman_fs.c  ps2_mmceman_fs.h
src/ps2/mx4sio/: ps2_mx4sio.c  ps2_mx4sio.h  ps2_mx4sio.pio
src/psram/: CMakeLists.txt  pio_qspi.c  pio_qspi.h  psram.c  psram.h
src/usb/: msc_handler.c  tusb_config.h  usb_descriptors.c
src/version/: CMakeLists.txt  script.cmake  version.h
src/version/template/: version.c
